NTU-894: Refactor Bestallnings classes to use LocalDate and update metadata handling. SonarQube fixes. (#108)
NTU-894: Refactor Bestallnings classes to use LocalDate and update metadata handling. SonarQube fixes. Add tests for date deserialization.

Co-authored-by: Stefan Sonesson <stefan.sonesson@redpill-linpro.com>